--- a/ledger-web.yml
+++ b/ledger-web.yml
@@ -19,7 +19,7 @@ reports:
         resource: 'balance'
         query: '-p {{period}} -d {{depth}} ^Assets ^Liabilities'
       - title: 'Trend'
-        type: 'trend'
+        type: 'periodical'
         parameters:
           period: 'current month'
           grouping: '-D'
@@ -36,7 +36,7 @@ reports:
         resource: 'balance'
         query: '-p {{period}} -d {{depth}} ^Expenses ^Income'
       - title: 'Trend'
-        type: 'trend'
+        type: 'periodical'
         parameters:
           period: 'current month'
           grouping: '-D'
@@ -66,7 +66,7 @@ reports:
         resource: 'balance'
         query: '-p {{period}} -d {{depth}} ^Expenses'
       - title: 'Trend'
-        type: 'trend'
+        type: 'periodical'
         parameters:
           period: 'current month'
           grouping: '-D'
@@ -82,7 +82,7 @@ reports:
         resource: 'balance'
         query: '-p {{period}} -d {{depth}} ^Income'
       - title: 'Trend'
-        type: 'trend'
+        type: 'periodical'
         parameters:
           period: 'current month'
           grouping: '-D'
