--- a/ledger-web.yml
+++ b/ledger-web.yml
@@ -54,7 +54,7 @@ reports:
     parameters:
       period: 'current month'
     resource: 'budget'
-    query: '-p {{period}}'
+    query: "-p '{{period}}' ^Expenses:"
   - title: 'Expenses'
     icon: 'long-arrow-right'
     reports:
